syntax = "proto3";

package api.proc;

option go_package = ".;api";

enum LoginTokenMethod {
  Refresh = 0;
  Google = 1;
  Github = 2;
  OAuth2 = 3;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};

  rpc SignupWithEmail(SignUpWithEmailRequest) returns (SignUpResponse) {};

  rpc SignupWithGoogle(SignUpWithGoogleRequest) returns (SignUpResponse) {};

  rpc SignupWithGithub(SignUpWithGithubRequest) returns (SignUpResponse) {};

  rpc SignupWithOAuth2(SignUpWithOAuth2Request) returns (SignUpResponse) {};

  rpc RefreshToken(RefreshTokenRequest) returns (Token) {}

  rpc Logout(LogoutRequest) returns (LogoutResponse) {};
}

message Token {
  string token = 1;
  string refresh_token = 2;
}

message RefreshTokenRequest {
  oneof id {
    LoginRequestEmail user = 1;
    string refresh_token = 2;
  }
}

message Permission {
  bool publish = 1;
  bool subscribe = 2;
}

message LoginRequestEmail {
  string email = 1;
  string username = 2;
  string password = 3;
}

message LoginRequestToken {
  string token = 1;
  LoginTokenMethod method = 2;
}

message LoginRequest {
  oneof req {
    LoginRequestEmail email = 1;
    LoginRequestToken token = 2;
  }
}

message LoginResponse {
  string error = 1;
  string token = 2;
  string refresh_token = 3;
}

message SignUpWithEmailRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message SignUpWithGoogleRequest { string token = 1; }

message SignUpWithGithubRequest { string token = 1; }

message SignUpWithOAuth2Request { string token = 1; }

message SignUpResponse { string error = 1; }

message LogoutRequest {}

message LogoutResponse {}
